--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.0.1",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.2.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.5",
