--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "avante",
   "private": true,
+  "homepage": "/Avante-Pipeline/#",
   "version": "0.1.0",
   "type": "module",
   "scripts": {
