--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "avante",
   "private": true,
-  "homepage": "Avante-Pipeline/",
+  "homepage": "https://gabrielsanovis.github.io/Avante-Pipeline",
   "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy" : "npm run build", 
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@hookform/error-message": "^2.0.1",
@@ -15,6 +17,7 @@
     "@radix-ui/react-slot": "^1.0.1",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.2.0",
+    "gh-pages": "^4.0.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "phosphor-react": "^1.4.1",
